--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -9,6 +9,7 @@
     "from ros_edf.ros_interface import EdfRosInterface\n",
     "from ros_edf.pc_utils import pcd_from_numpy, draw_geometry, reconstruct_surface\n",
     "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, save_demos\n",
+    "from edf.pc_utils import check_pcd_collision, optimize_pcd_collision\n",
     "\n",
     "import torch\n",
     "import numpy as np\n",
@@ -179,38 +180,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env_interface.moveit_interface.arm_group.set_goal_joint_tolerance(value=0.01) \n",
-    "env_interface.moveit_interface.arm_group.set_goal_position_tolerance(value=0.001) \n",
-    "env_interface.moveit_interface.arm_group.set_goal_orientation_tolerance(value=0.01) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -234,8 +203,10 @@
    "outputs": [],
    "source": [
     "# target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.35])\n",
-    "target_poses = SE3([0.5000, -0.5000, -0.5000, -0.5000, 0.12, -0.18, 0.32])\n",
-    "results, result_pose = env_interface.move_to_target_pose(poses = target_poses)"
+    "target_poses = SE3([0.5000, -0.5000, -0.5000, -0.5000, 0.12, -0.18, 0.30])\n",
+    "_, pre_place_poses = optimize_pcd_collision(x=scene_pc, y=grasp_pc, \n",
+    "                                            cutoff_r = 0.03, dt=0.01, eps=1., iters=5,\n",
+    "                                            rel_pose=target_poses)"
    ]
   },
   {
@@ -244,17 +215,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert results[-1] is True\n",
+    "results, result_pose = env_interface.move_to_target_pose(poses = pre_place_poses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if results[-1] is True:\n",
+    "    result = env_interface.move_cartesian(poses=target_poses, cartesian_step=0.01, cspace_step_thr=10, avoid_collision=False)\n",
+    "else:\n",
+    "    result = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert result is True\n",
     "env_interface.detach()\n",
-    "env_interface.release()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "env_interface.release()\n",
     "place_demo = TargetPoseDemo(target_poses=target_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)"
    ]
   },
