--- a/place_eval_test.ipynb
+++ b/place_eval_test.ipynb
@@ -49,25 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pick_agent_config_dir = \"config/agent_config/pick_agent.yaml\"\n",
-    "# pick_agent_param_dir = \"checkpoint/mug_10_demo/pick/model_iter_600.pt\"\n",
-    "# max_N_query_pick = 1\n",
-    "# langevin_dt_pick = 0.001\n",
-    "\n",
-    "# pick_agent = PickAgent(config_dir=pick_agent_config_dir, \n",
-    "#                        device = device,\n",
-    "#                        max_N_query = max_N_query_pick, \n",
-    "#                        langevin_dt = langevin_dt_pick)\n",
-    "\n",
-    "# pick_agent.load(pick_agent_param_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "place_agent_config_dir = \"config/agent_config/place_agent.yaml\"\n",
     "place_agent_param_dir = \"checkpoint/mug_10_demo/place/model_iter_600.pt\"\n",
     "max_N_query_place = 3\n",
@@ -87,12 +68,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for train_batch in train_dataloader:\n",
-    "    for data in train_batch:\n",
-    "        demo_seq_raw: DemoSequence = data['raw']\n",
-    "        demo_seq: DemoSequence = data['processed']\n",
-    "        break\n",
-    "    break"
+    "scene_proc_fn = Compose([Downsample(voxel_size=1.7, coord_reduction=\"average\"),\n",
+    "                            NormalizeColor(color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5]))])\n",
+    "grasp_proc_fn = Compose([Downsample(voxel_size=1.4, coord_reduction=\"average\"),\n",
+    "                            NormalizeColor(color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5]))])"
    ]
   },
   {
@@ -101,10 +80,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_proc_fn = Compose([Downsample(voxel_size=1.7, coord_reduction=\"average\"),\n",
-    "                            NormalizeColor(color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5]))])\n",
-    "grasp_proc_fn = Compose([Downsample(voxel_size=1.4, coord_reduction=\"average\"),\n",
-    "                            NormalizeColor(color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5]))])"
+    "for train_batch in train_dataloader:\n",
+    "    for data in train_batch:\n",
+    "        demo_seq_raw: DemoSequence = data['raw']\n",
+    "        demo_seq: DemoSequence = data['processed']\n",
+    "        break\n",
+    "    break"
    ]
   },
   {
@@ -199,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
