pick-and-place success, but grasp observation is not good

--- a/move_plan_test.ipynb
+++ b/move_plan_test.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ros_edf.ros_interface import EdfRosInterface\n",
     "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, DemoSeqDataset, save_demos\n",
@@ -38,37 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m[ WARN] [1676268174.804222163]: Link axle_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
-      "\u001b[33m[ WARN] [1676268174.804242319]: Link front_rocker_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
-      "\u001b[33m[ WARN] [1676268174.804254075]: Link rear_rocker_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
-      "\u001b[33m[ WARN] [1676268174.804263875]: Link front_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
-      "\u001b[33m[ WARN] [1676268174.804269385]: Link front_lights_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
-      "\u001b[33m[ WARN] [1676268174.804275402]: Link left_side_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
-      "\u001b[33m[ WARN] [1676268174.804281126]: Link rear_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
-      "\u001b[33m[ WARN] [1676268174.804285858]: Link rear_lights_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
-      "\u001b[33m[ WARN] [1676268174.804291013]: Link right_side_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1676268176.056413]: Commencing scene point cloud update...\n",
-      "[INFO] [1676268176.407205]: Processing received scene point cloud...\n",
-      "[INFO] [1676268176.412616]: Scene pointcloud update success!\n",
-      "[INFO] [1676268176.413166]: Commencing end-effector point cloud update...\n",
-      "[INFO] [1676268176.463692]: Processing received end-effector point cloud...\n",
-      "[INFO] [1676268176.464459]: End-effector pointcloud update success!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env_interface = EdfRosInterface(reference_frame = \"scene\")\n",
     "env_interface.reset()\n",
@@ -77,22 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [1676268180.963775]: EDF Moveit Interface: Found a motion plan with length: 10\n",
-      "[INFO] [1676268181.266529]: EDF Moveit Interface: Found a motion plan with length: 6\n",
-      "[INFO] [1676268181.363917]: EDF Moveit Interface: Found a motion plan with length: 6\n",
-      "[INFO] [1676268181.398805]: EDF Moveit Interface: Found a cartesian plan with length: 43\n",
-      "[INFO] [1676268181.448874]: EDF Moveit Interface: Found a cartesian plan with length: 42\n",
-      "[INFO] [1676268181.567001]: EDF Moveit Interface: Found a motion plan with length: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plan_targets = [(SE3([0., 0., 1., 0., 0., 0., 0.6]), \"default\", {}),\n",
     "                (SE3([0., 0., 1., 0., 0., 0., 0.4]), \"default\", {}),\n",
@@ -108,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
