--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -36,7 +36,9 @@
     "# device = 'cpu'\n",
     "unit_len = 0.01\n",
     "\n",
-    "T_eg = SE3([ 0.707,  0.000,  0.000,  0.707,  0.000,  0.000, 0.150])"
+    "T_eg = SE3([ 0.707,  0.000,  0.000,  0.707,  0.000,  0.000, 0.150])\n",
+    "T_observe_grasp = SE3([0.0, 0.0, 1.0, 0.0, 0.00, 0.0, 0.6])\n",
+    "T_observe_scene = SE3([0.0, 0.0, 1.0, 0.0, -0.4, 0.4, 0.6])"
    ]
   },
   {
@@ -164,14 +166,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define Pre-pick and Post-pick poses"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pick_poses = recover_scale(SE3(Ts[0].cpu()))\n",
+    "pick_poses = recover_scale(SE3(Ts.cpu()))\n",
     "pick_poses = SE3.multiply(pick_poses, T_eg.inv())\n",
-    "pre_pick_poses = SE3.multiply(pick_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))"
+    "pre_pick_poses = SE3.multiply(pick_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))\n",
+    "post_pick_poses = SE3.multiply(SE3([1., 0., 0., 0., 0., 0., 0.2]), pick_poses)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Move to Pre-pick Pose"
    ]
   },
   {
@@ -180,51 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface.moveit_interface.plan_pose_waypoints(positions=)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pick_poses.poses[:,-1] = 0.3"
+    "idx = 0\n",
+    "pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]"
    ]
   },
   {
@@ -233,7 +207,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface.move_to_target_pose(poses=pick_poses)"
+    "plan_targets = [(pre_pick_pose, \"default\", {}),\n",
+    "                (pick_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
+    "               ]\n",
+    "\n",
+    "\n",
+    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
+    "\n",
+    "if plan_results[-1] is True:\n",
+    "    execution_results = env_interface.execute_plans(plans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grasp"
    ]
   },
   {
@@ -242,7 +231,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface.move_cartesian(poses=pick_poses, cartesian_step=0.01, cspace_step_thr=10, avoid_collision=False)"
+    "if execution_results[-1] is True:\n",
+    "    grasp_results = env_interface.grasp()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Move to Post-pick Pose"
    ]
   },
   {
@@ -251,32 +248,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface.clear_octomap()"
+    "plan_targets = [(post_pick_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
+    "               ]\n",
+    "\n",
+    "\n",
+    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
+    "if plan_results[-1] is True:\n",
+    "    execution_results = env_interface.execute_plans(plans)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "result = env_interface.pick(target_poses=pick_poses)\n",
-    "pre_grasp_results, grasp_pose, grasp_result, post_grasp_results, final_pose = result\n",
-    "pick_success = final_pose is not None"
+    "# Place"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observe Hand"
    ]
   },
   {
@@ -285,6 +277,155 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plan_targets = [(T_observe_grasp, \"default\", {}),\n",
+    "               ]\n",
+    "\n",
+    "\n",
+    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
+    "if plan_results[-1] is True:\n",
+    "    execution_results = env_interface.execute_plans(plans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grasp_raw = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
+    "env_interface.attach(pcd = grasp_raw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observe Scene"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan_targets = [(T_observe_scene, \"default\", {}),\n",
+    "               ]\n",
+    "\n",
+    "\n",
+    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
+    "if plan_results[-1] is True:\n",
+    "    execution_results = env_interface.execute_plans(plans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sample Place Poses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene_proc = scene_proc_fn(scene_raw).to(device)\n",
+    "grasp_proc = grasp_proc_fn(grasp_raw).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_seed = 100\n",
+    "place_policy = 'sorted'\n",
+    "place_mh_iter = 1000\n",
+    "place_langevin_iter = 300\n",
+    "place_dist_temp = 1.\n",
+    "place_policy_temp = 1.\n",
+    "place_optim_iter = 100\n",
+    "place_optim_lr = 0.005\n",
+    "place_query_temp = 1.\n",
+    "\n",
+    "Ts, edf_outputs, logs = place_agent.forward(scene=scene_proc, T_seed=T_seed, grasp=grasp_proc, policy = place_policy, mh_iter=place_mh_iter, langevin_iter=place_langevin_iter, \n",
+    "                                            temperature=place_dist_temp, policy_temperature=place_policy_temp, optim_iter=place_optim_iter, optim_lr=place_optim_lr, query_temperature=place_query_temp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define Pre-place and Post-place poses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "place_poses = recover_scale(SE3(Ts.cpu()))\n",
+    "_, pre_place_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, cutoff_r = 0.03, dt=0.01, eps=1., iters=5, rel_pose=place_poses)\n",
+    "post_place_poses = SE3.multiply(place_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 0\n",
+    "place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# draw_geometry([scene_raw, grasp_raw.transformed(place_pose)[0]])\n",
+    "# draw_geometry([scene_raw, grasp_raw.transformed(pre_place_pose)[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan_targets = [(pre_place_pose, \"default\", {}),\n",
+    "                (place_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
+    "               ]\n",
+    "\n",
+    "\n",
+    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
+    "\n",
+    "if plan_results[-1] is True:\n",
+    "    execution_results = env_interface.execute_plans(plans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_interface.detach()\n",
     "env_interface.release()"
    ]
   },
@@ -293,56 +434,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "plan_targets = [(post_place_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
+    "               ]\n",
+    "\n",
+    "\n",
+    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
+    "\n",
+    "if plan_results[-1] is True:\n",
+    "    execution_results = env_interface.execute_plans(plans)"
+   ]
   }
  ],
  "metadata": {
